some style changes

--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -1,8 +1,8 @@
 {%extends 'base.html'%}
 
 {%block body_block%}
-<div class="mx-auto my-4 max-w-4xl md:my-6">
-    <div class="overflow-hidden  rounded-xl shadow">
+<div class="mx-auto my-4 max-w-4xl md:my-6 ">
+    <div class="overflow-hidden  rounded-xl shadow bg-teal-50 mb-52 mt-10">
       <div class="grid grid-cols-1 md:grid-cols-2">
         <div class="bg-gray-100 px-5 py-6 md:px-8">
           <div class="flow-root">
