--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -11,17 +11,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     
     {% block link_block %} {% endblock %}
 </head>
 <style>
 
 </style>
-<body>
+<body class="bg-teal-200">
 
     <!-- Navbar start -->
 
-    <div class="relative w-full bg-white shadow-md">
+    <div class="relative w-full bg-teal-50 shadow-md">
         <div class="mx-auto flex max-w-7xl items-center justify-between px-4 py-2 sm:px-6 lg:px-8">
           <div class="inline-flex items-center space-x-2">
             <span>
@@ -60,11 +61,19 @@
           <div class="hidden lg:block">
             <a
               href="{% url 'cart-list' %}"
-              class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+              class="me-3 rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
             >
             <i class="fa-solid fa-cart-shopping"></i> Cart 
               <span class="ml-7px inline-flex items-center rounded-md bg-yellow-50 px-1 text-xs font-medium text-yellow-800 ring-1 ring-inset ring-yellow-600/20">{{item_count}}</span>
-          </a>
+            </a>
+
+            <a
+            href="{% url 'signout' %}"
+            class="rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+            >
+            <i class="fa-solid fa-right-from-bracket"></i> Logout 
+            
+            </a>
           </div>
           <div class="lg:hidden hamburger-btn">
             <svg
@@ -85,17 +94,17 @@
             </svg>
           </div>
         </div>
-        <div class="mobile-navbar-links hidden px-3 text-center">
-          <ul>
-            <li class="my-4 border-b-2">
+        <div class="mobile-navbar-links hidden px-3 py-2 text-end me-5">
+          <ul class="text-xl">
+            <li class="my-4">
               <a
-                href="#"
+                href="{% url 'home' %}"
                 class="text-sm font-semibold text-gray-800 hover:text-gray-900"
               >
                 Home
               </a>
             </li>
-            <li class="mb-4 border-b-2">
+            <li class="mb-4 ">
               <a
                 href="#"
                 class="text-sm font-semibold text-gray-800 hover:text-gray-900"
@@ -103,7 +112,7 @@
                 About
               </a>
             </li>
-            <li class="mb-4 border-b-2">
+            <li class="mb-4">
               <a
                 href="#"
                 class="text-sm font-semibold text-gray-800 hover:text-gray-900"
@@ -111,15 +120,29 @@
                 Contact
               </a>
             </li>
-          </ul>
-          <a
+
+            <li class="mb-4">
+              <a
               href="{% url 'cart-list' %}"
-              class="mb-4 rounded-md bg-black px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+              class="mb-4 rounded-md bg-black px-[10px] py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
             >
             <i class="fa-solid fa-cart-shopping"></i> Cart
 
             <span class="ml-5px inline-flex items-center rounded-md bg-yellow-50 px-1 text-xs font-medium text-yellow-800 ring-1 ring-inset ring-yellow-600/20">{{item_count}}</span>
-        </a>
+             </a>
+            </li>
+            <li class="mb-4">
+              <a
+              href="{% url 'signout' %}"
+              class="mb-4 rounded-md bg-black px-[11px] py-2 text-sm font-semibold text-white shadow-sm hover:bg-black/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+            >
+            <i class="fa-solid fa-right-from-bracket"></i> Logout
+
+            
+             </a>
+            </li>
+          </ul>
+          
         </div>
     </div>
       
@@ -129,25 +152,14 @@
 
     <!-- footer start -->
 
-    <section class="relative overflow-hidden bg-white py-8 border-t-2">
-        <div class="container relative z-10 mx-auto px-4">
-          <div class="-m-8 flex flex-wrap items-center justify-between">
+    <section class="overflow-hidden bg-teal-50 py-8 border-t-2 fixed bottom-0 left-0 right-0">
+        <div class="container relative z-10 mx-auto px-4 ">
+          <div class="-m-8 flex flex-wrap items-center justify-between ">
             <div class="w-auto p-8">
               <a href="#">
                 <div class="inline-flex items-center">
-                  <svg
-                    width="40"
-                    height="46"
-                    viewBox="0 0 50 56"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M23.2732 0.2528C20.8078 1.18964 2.12023 12.2346 1.08477 13.3686C0 14.552 0 14.7493 0 27.7665C0 39.6496 0.0986153 41.1289 0.83823 42.0164C2.12023 43.5449 23.2239 55.4774 24.6538 55.5267C25.9358 55.576 46.1027 44.3832 48.2229 42.4602C49.3077 41.474 49.3077 41.3261 49.3077 27.8158C49.3077 14.3055 49.3077 14.1576 48.2229 13.1714C46.6451 11.7415 27.1192 0.450027 25.64 0.104874C24.9497 -0.0923538 23.9142 0.00625992 23.2732 0.2528ZM20.2161 21.8989C20.2161 22.4906 18.9835 23.8219 17.0111 25.3997C15.2361 26.7803 13.8061 27.9637 13.8061 28.0623C13.8061 28.1116 15.2361 29.0978 16.9618 30.2319C18.6876 31.3659 20.2655 32.6479 20.4134 33.0917C20.8078 34.0286 19.871 35.2119 18.8355 35.2119C17.8001 35.2119 9.0233 29.3936 8.67815 28.5061C8.333 27.6186 9.36846 26.5338 14.3485 22.885C17.6521 20.4196 18.4904 20.0252 19.2793 20.4196C19.7724 20.7155 20.2161 21.3565 20.2161 21.8989ZM25.6893 27.6679C23.4211 34.9161 23.0267 35.7543 22.1391 34.8668C21.7447 34.4723 22.1391 32.6479 23.6677 27.9637C26.2317 20.321 26.5275 19.6307 27.2671 20.3703C27.6123 20.7155 27.1685 22.7864 25.6893 27.6679ZM36.0932 23.2302C40.6788 26.2379 41.3198 27.0269 40.3337 28.1609C39.1503 29.5909 31.6555 35.2119 30.9159 35.2119C29.9298 35.2119 28.9436 33.8806 29.2394 33.0424C29.3874 32.6479 30.9652 31.218 32.7403 29.8867L35.9946 27.4706L32.5431 25.1532C30.6201 23.9205 29.0915 22.7371 29.0915 22.5892C29.0915 21.7509 30.2256 20.4196 30.9159 20.4196C31.3597 20.4196 33.6771 21.7016 36.0932 23.2302Z"
-                      fill="black"
-                    ></path>
-                  </svg>
-                  <span class="ml-4 text-lg font-bold">DevUI</span>
+                  <i class="fa-solid fa-store"></i>
+                  <span class="ml-4 text-lg font-bold">TrendBazar</span>
                 </div>
               </a>
             </div>
@@ -240,7 +252,9 @@
     <!-- footer end -->
     
 </body>
+<script src="{% static 'js/base.js' %}"></script>
 
 {% block script_block %} {% endblock %}
+
 
 </html>
