--- a/store/templates/cart_items.html
+++ b/store/templates/cart_items.html
@@ -3,7 +3,7 @@
 {%block body_block%}
 
 
-<div class="mx-auto flex max-w-3xl flex-col space-y-4 p-6 px-2 sm:p-10 sm:px-2">
+<div class="mx-auto flex max-w-3xl flex-col space-y-4 p-6 px-5 sm:p-10 sm:px-5 bg-teal-50 mt-10 mb-52">
     <h2 class="text-3xl font-bold">Your cart</h2>
     <p class="mt-3 text-sm font-medium text-gray-700">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eius
