--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -7,7 +7,7 @@
 {% block body_block %}
 
 
-<div class="mx-auto grid w-full max-w-7xl items-center space-y-4 px-2 py-10 md:grid-cols-2 md:gap-6 md:space-y-0 lg:grid-cols-4">
+<div class="mx-auto mb-16 grid w-full max-w-7xl items-center space-y-4 px-2 py-10 md:grid-cols-2 md:gap-6 md:space-y-0 lg:grid-cols-4">
 
     {% for p in data %}
 
@@ -40,6 +40,7 @@
 
 {% block script_block %}
 
+<script  src="{% static 'js/home.js' %}"></script>
 
 
 {% endblock %}
