footer style changes

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -152,7 +152,7 @@
 
     <!-- footer start -->
 
-    <section class="overflow-hidden bg-teal-50 py-8 border-t-2 fixed bottom-0 left-0 right-0">
+    <section class="footer-section overflow-hidden bg-teal-50 py-8 border-t-2 ">
         <div class="container relative z-10 mx-auto px-4 ">
           <div class="-m-8 flex flex-wrap items-center justify-between ">
             <div class="w-auto p-8">
