--- a/store/templates/myorder.html
+++ b/store/templates/myorder.html
@@ -1,17 +1,19 @@
 {%extends 'base.html'%}
 
 {%block body_block%}
+<div class="text-center mt-5">
 
-
+  <h2 class="text-3xl font-bold">Order Details</h2>
+  <div class="mt-3 text-sm">
+    Check the status of recent and old orders &amp; discover more products
+  </div>
+</div>
 
 {%for o in data%}
 
-<div class="mx-auto my-4 max-w-6xl px-2 md:my-6 md:px-0 mt-10">
-    <h2 class="text-3xl font-bold">Order Details</h2>
-    <div class="mt-3 text-sm">
-      Check the status of recent and old orders &amp; discover more products
-    </div>
-    <div class="mt-8 flex flex-col overflow-hidden rounded-lg border border-gray-300 md:flex-row bg-teal-50 mb-28">
+<div class="mx-auto max-w-6xl px-2 md:px-0 my-5">
+   
+    <div class="flex flex-col overflow-hidden rounded-lg border border-gray-300 md:flex-row bg-teal-50">
       <div class="w-full border-r border-gray-300 bg-gray-100 md:max-w-xs">
         <div class="p-8">
           <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-1">
@@ -89,3 +91,10 @@
   
 
 {%endblock%}
+
+{% block script_block %}
+<script>
+
+  document.querySelector(".footer-section").classList.remove("fixed,bottom-0,left-0,right-0")
+</script>
+{% endblock %}
